Send moderationEvent on (un)mute to update Tab.