@@ -9,6 +9,7 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Online player name selector for the 1st command argument.
@@ -29,7 +30,7 @@ public class PlayerSelector extends AbstractTabCompleter {
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
 
         //Get array of online players, excluding yourself.
-        List<String> names = Network.getInstance().getOnlineUsers().stream().map(OnlineUser::getName).toList();
+        List<String> names = Network.getInstance().getOnlineUsers().stream().map(OnlineUser::getName).collect(Collectors.toList());
         if (sender instanceof Player p) {
             names.remove(p.getName());
         }
